tests/baselines/reference/decoratorOnClassConstructor1.errors.txt
tests/cases/conformance/decorators/class/constructor/decoratorOnClassConstructor1.ts(4,5): error TS1206: Decorators are not valid here.
tests/cases/conformance/decorators/class/constructor/decoratorOnClassConstructor1.ts(8,5): error TS1206: Decorators are not valid here.


==== tests/cases/conformance/decorators/class/constructor/decoratorOnClassConstructor1.ts (2 errors) ====
    declare function dec<T>(target: any, propertyKey: string, descriptor: TypedPropertyDescriptor<T>): TypedPropertyDescriptor<T>;
    
    class C {
        @dec constructor() {}
        ~
!!! error TS1206: Decorators are not valid here.
    }
    
    const C1 = class {
        @dec constructor() {}
        ~
!!! error TS1206: Decorators are not valid here.
    }
    